refractor(password):update password
